Closed Bug 1610810 Opened 5 years ago Closed 5 years ago

FTP download prompt appears while authentication dialog is displayed

Categories

(Core Graveyard :: Networking: FTP, defect, P2)

defect

Tracking

(firefox-esr68 unaffected, firefox72 wontfix, firefox73 wontfix, firefox74 verified)

VERIFIED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox72 --- wontfix
firefox73 --- wontfix
firefox74 --- verified

People

(Reporter: tbabos, Assigned: michal)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(2 files)

Attached image Screenshot of issue

Affected versions
Nightly 74.0a1 74.0a1 (2020-01-21) (64-bit)
Beta 73.0b8 (64-bit)
Release 72.0.2 (64-bit)

Affected platforms
Windows 10 x64
Ubuntu 18.04

Steps to reproduce

  1. Launch Firefox
  2. Go to ftp://demo.wftpserver.com/
  3. Wait 10-15 seconds while the authentication dialog is displayed

Expected result
Only the authentication prompt should be displayed.

Actual Result
The download prompt is also displayed after waiting 10-15 seconds

Note
This is not reproducible in FX70.

Regression-Range
2020-01-22T12:21:32: DEBUG : Found commit message:
Bug 1560699 - Download FTP resources instead of rendering them. r=michal

Differential Revision: https://phabricator.services.mozilla.com/D39702

Jan Andre, it seems the patch in Bug 1560699 caused this regression, could you have a look please? Thanks

Flags: needinfo?(jan)

I fear I must leave this to someone else, that was my only and nooby network code contribution.
To me this looks related to bug 1475261.

Flags: needinfo?(jan)

(In reply to Jan Andre Ikenmeyer [:darkspirit] from comment #2)

I fear I must leave this to someone else, that was my only and nooby network code contribution.
To me this looks related to bug 1475261.

No worry, let's ping your reviewer instead :)
Michal, could you have a look please? Thanks

Flags: needinfo?(michal.novotny)

As dependency of bug 1574475 it would be advisable to disable network.ftp.enabled with Nightly 75 - now that Chrome 80 is shipping with ftp disabled in two weeks - and to fix its unknown protocol behavior (to invoke the system's ftp program).

Likely a problem with the web site. I was not able to reproduce this. good first bug?

Hey Jim, this should be easy to reproduce, make sure you wait 10-20 seconds. I can reproduce this on multiple devices, can attach a screen recording too if it is needed.

(In reply to Timea Cernea [:tbabos] from comment #6)

Hey Jim, this should be easy to reproduce, make sure you wait 10-20 seconds. I can reproduce this on multiple devices, can attach a screen recording too if it is needed.

Just retested on Mac 10.15.2, it can be reproduced.

Set nsFtpChannel's content-type to application/octet-stream only when downloading a file.

Assignee: nobody → michal.novotny
Status: NEW → ASSIGNED
Flags: needinfo?(michal.novotny)
Priority: P5 → P2
Whiteboard: [necko-triaged]
Pushed by mnovotny@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/76ba712aa179 FTP download prompt appears while authentication dialog is displayed, r=valentin
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
Blocks: 1585952
Flags: qe-verify+
Flags: needinfo?(tbabos)
QA Contact: tbabos

Verified - fixed on latest Nightly 75.0a1 (2020-02-16) (64-bit) on Windows 10 x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Flags: needinfo?(tbabos)
Has Regression Range: --- → yes
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: