Bug 1610810 - FTP download prompt appears while authentication dialog is displayed, r=valentin

Set nsFtpChannel's content-type to application/octet-stream only when downloading a file.

Differential Revision: https://phabricator.services.mozilla.com/D61494