netwerk/protocol/ftp/nsFTPChannel.cpp
@@ -6,7 +6,6 @@
 
 #include "nsFTPChannel.h"
 #include "nsFtpConnectionThread.h"  // defines nsFtpState
-#include "nsMimeTypes.h"
 
 #include "nsThreadUtils.h"
 #include "mozilla/Attributes.h"
@@ -92,7 +91,6 @@ nsresult nsFtpChannel::OpenContentStream(bool async, nsIInputStream** result,
                                          nsIChannel** channel) {
   if (!async) return NS_ERROR_NOT_IMPLEMENTED;
 
-  SetContentType(NS_LITERAL_CSTRING(APPLICATION_OCTET_STREAM));
   RefPtr<nsFtpState> state = new nsFtpState();
 
   nsresult rv = state->Init(this);
